--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
-    <data>
+    <Button
+        android:id="@+id/btn_view_binding"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Binding" />
 
-        <import type="com.sample.twowaysdatabinding.MainViewModel" />
+    <Button
+        android:id="@+id/btn_data_binding"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Data Binding" />
 
-        <variable
-            name="viewModel"
-            type="MainViewModel" />
+    <Button
+        android:id="@+id/btn_2way_data_binding"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2Ways Data Binding" />
 
-    </data>
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        tools:context=".MainActivity">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:text="@={viewModel.email}" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:text="@={viewModel.password}" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:onClick="@{() -> viewModel.doLogin()}"
-            android:text="Login" />
-
-    </LinearLayout>
-
-</layout>
+</LinearLayout>
