--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Twowaysdatabinding" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Base" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +12,17 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="title">Welcome to Tutorial</item>
     </style>
+
+    <style name="ViewBinding" parent="Theme.Base">
+        <item name="title">Welcome to View Binding</item>
+    </style>
+    <style name="DataBinding" parent="Theme.Base">
+        <item name="title">Welcome to Data Binding</item>
+    </style>
+    <style name="TwoWaysDataBinding" parent="Theme.Base">
+        <item name="title">Welcome to 2Ways Data Binding</item>
+    </style>
+
 </resources>
